[workspace]

[package]
name = "nativelink-provisioner"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nativelink-provisioner"

[dependencies]
bytes = { version = "1.10.1", default-features = false }
tokio = { version = "1", features = ["full"] }
kube = { version = "2.0.1", features = ["runtime"] }
serde = "1.0.219"
serde_json = "1.0.140"
humantime-serde = "1.1.1"
fred = { version = "10.1.0", default-features = false, features = [
  "blocking-encoding",
  "custom-reconnect-errors",
  "enable-rustls-ring",
  "i-redisearch",
  "i-scripts",
  "i-std",
  "metrics",
  "sentinel-auth",
  "sentinel-client",
  "sha-1",
  "subscriber-client",
] }
futures = { version = "0.3.31", default-features = false }
k8s-openapi = { version = "0.26.0", features = ["v1_30"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1.16.0", default-features = false, features = [
  "serde",
  "v4",
  "v6",
] }
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
